--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,6 @@
     </string>
     <string name="facebook_app_id">1454660677922893</string>
     <string name="fb_login_protocol_scheme">fb1454660677922893</string>
+    <string name="confirm">confirm</string>
 
 </resources>
