--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="auth_failed">\"Login Failed\"</string>
 
     <string name="confirm">confirm</string>
+    <string name="title_activity_map">MapActivity</string>
 
 </resources>
