--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,10 +30,10 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_perfil">Perfil</string>
 
-    <!-- Strings related to Settings -->
+    <!-- Strings relacionados con el Perfil -->
 
     <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
+    <string name="profile_header_nombre">Nombre</string>
 
     <string name="pref_title_social_recommendations">Enable social recommendations</string>
     <string name="pref_description_social_recommendations">Recommendations for people to contact
@@ -101,5 +101,6 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
+    <string name="nombre_y_apellido">Nombre y Apellido</string>
 
 </resources>
