Update Profile: Nombre y Apellido actualizable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,6 +101,10 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="nombre_y_apellido">Nombre y Apellido</string>
+
+    <string name="nombre">Nombre</string>
+
+    <string name="apellido">Apellido</string>
+    <string name="title_activity_profile">ProfileActivity</string>
 
 </resources>
