Registro modo conductor aparentemente terminado. Falta hacer comunicarme con el appserver para transmitir los datos del auto del chofer

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -108,5 +108,7 @@
     <string name="title_activity_profile">ProfileActivity</string>
     <string name="title_activity_sign_up">SignUpActivity</string>
     <string name="title_activity_driver_sign_up">DriverSignUpActivity</string>
+    <string name="title_activity_driver_sign_up2">DriverSignUpActivity2</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
