--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -110,5 +110,6 @@
     <string name="title_activity_driver_sign_up">DriverSignUpActivity</string>
     <string name="title_activity_driver_sign_up2">DriverSignUpActivity2</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="title_activity_maps">Map</string>
 
 </resources>
